# GPC

./: .gitignore  A069_T02_E01_GPC1_B01_R01_M01_CLBRTN.csv  GPC_analysis.ipynb  README.md  environment.yaml  pyproject.toml
data/AqMethodReport/: PS-H Red_2.csv
data/Chromatograms/: combine_gpc_by_detector.py
data/Chromatograms/4000000020/: 20251007 145058_4000000020_010.dx_DAD1A.CSV  20251007 145058_4000000020_010.dx_DAD1B.CSV  20251007 145058_4000000020_010.dx_DAD1C.CSV  20251007 145058_4000000020_010.dx_DAD1D.CSV  20251007 145058_4000000020_010.dx_DAD1E.CSV  20251007 145058_4000000020_010.dx_DAD1F.CSV  20251007 145058_4000000020_010.dx_DAD1G.CSV  20251007 145058_4000000020_010.dx_DAD1H.CSV  20251007 145058_4000000020_010.dx_RID1A.CSV  combine_gpc_by_sample.py
data/Chromatograms/PS-H Blue/: 20251007 130759_PS-H Blue_006.dx_DAD1A.CSV  20251007 130759_PS-H Blue_006.dx_DAD1B.CSV  (+7 more)
data/CoA/: COA_Polystyrene High EasiVials.csv  COA_Polystyrene Medium EasiVials.csv  COA_Polystyrene_High.json  COA_Polystyrene_Medium.json
data/QuickReport/: 4000000020_1.csv  PS-H Blue_1.csv  PS-H Red_1.csv  PS-H White_1.csv  PS-M Blue_1.csv  PS-M Red_1.csv  PS-M White_1.csv  THF Blank_1_0001.csv  V0 Toluene_1.csv
results/: sets.json
results/calibration/: combined_CLBRTN.csv
src/parser/: GPC_calibration_parser.py  __init__.py  analyze.py  batch_parser.py  calibration_parser.py  chrom_labeling.py  compute_results.py  metadata_parser.py  method_normalizer.py  method_parser_structured.py  run.py  utils.py  viz.py  workflow_gpc.py  workflow_hplc.py
(+111 files in other folders)
