[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swisscat-gpc"
version = "0.1.0"
description = "SwissCAT+ HPLC/GPC parsing, calibration, and reporting workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "SwissCAT+ Team" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "plotly>=5.20",
  "pubchempy>=1.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "ruff>=0.6",
  "ipykernel>=6.29"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
